--- a/问题总结.md
+++ b/问题总结.md
@@ -3,9 +3,9 @@
 PC端有一个dblclick事件是可以实现双击效果的，但是对于移动端是不起作用的。所以在这的一个思路是在一定短时间内触发两次touch即可以执行双击事件。
   
 ## 2.webpack+vue.js 引用文件路径问题
-通常在非模块化开发时可以直接
+通常在非模块化开发时可以在标签中直接
 <pre>
- <img src="../assets/img/blackHeart.png"/>
+src="../assets/img/blackHeart.png"
 </pre>
 但是在模块化开发下需要：
 <pre>
