--- a/问题总结.md
+++ b/问题总结.md
@@ -1,7 +1,25 @@
 
 ## 1.关于移动端的双击问题解决
 PC端有一个dblclick事件是可以实现双击效果的，但是对于移动端是不起作用的。所以在这的一个思路是在一定短时间内触发两次touch即可以执行双击事件。
-  
+<pre>
+//解决移动端双击事件
+dbtouch(index) {
+      //如果第一次点击
+      if (this.time == 0) {
+        this.startTime = new Date().getTime();
+        this.time = 1;
+      } else {
+        let secondTime = new Date().getTime();
+        if (secondTime - this.startTime < 300) {
+          /**
+           * 这里填写要执行的函数
+           */
+        }else{
+          this.startTime=secondTime;
+        } 
+      }
+}
+</pre>
 ## 2.webpack+vue.js 引用文件路径问题
 通常在非模块化开发时可以在标签中直接
 <pre>
