--- a/问题总结.md
+++ b/问题总结.md
@@ -42,3 +42,5 @@ img :src="img"
 background-image: url('path/to/your/source');
 </pre>
 ## 3.引入SVG文件的方式
+## 4.移动端取消默认点击电话号跳转拨号事件
+添加meta标签  添加e.preventDefault()
