--- a/问题总结.md
+++ b/问题总结.md
@@ -42,4 +42,4 @@ img :src="img"
 background-image: url('path/to/your/source');
 </pre>
 ## 3.引入SVG文件的方式
-可以通过<embed>或者<object>标签通过src引入svg文件，但是embed标签可以添加脚本，object标签不可以。
+可以通过 embed 或者 object 标签通过src引入svg文件，但是embed标签可以添加脚本，object标签不可以。
